<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llEmptyResult"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/general_medium_space">

    <ImageView
        android:id="@+id/imgEmptyIcon"
        android:layout_width="@dimen/empty_icon_size"
        android:layout_height="@dimen/empty_icon_size"
        android:contentDescription="@string/main_empty_icon_cd"
        android:tint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_sentiment_very_dissatisfied" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/general_medium_space"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/main_empty_title"
        android:textSize="@dimen/empty_title_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/general_medium_space"
        android:layout_marginTop="@dimen/general_small_space"
        android:layout_marginEnd="@dimen/general_medium_space"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/main_empty_text"
        android:textSize="@dimen/empty_message_text_size" />
</LinearLayout>